tests/paczka1/small_fuzzy/69728033.err
Error in line 4: y5IsDBs1S53950,9
Error in line 12: 3RZthNe S112 81,0
Error in line 5: y5IsDBs1 S539 128,3
